--- a/references.bib
+++ b/references.bib
@@ -400,8 +400,8 @@
 }
 
 @article{virtual-knot-presentation-of-ribbon-torus-knots,
-	author = {SATOH, SHIN},
-	title = {VIRTUAL KNOT PRESENTATION OF RIBBON TORUS-KNOTS},
+	author = {Satoh, Shin},
+	title = {Virtual knot presentation of ribbon torus-knots},
 	journal = {Journal of Knot Theory and Its Ramifications},
 	volume = {09},
 	number = {04},
