Fix: found use of hat where should be bar

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -698,7 +698,7 @@ Here we rely on the fact that \(\mathcal{K}\) is of finite type (finite-dimensio
 		\otimes
 		V_{2}(\mu^{I}\partial^{\bar{I}}(k^{\bullet})).
 	\]
-	It follows directly from this that the product of two Vassiliev invariants respects the filtration: if \(V_{1}\) is of type \(m\) and \(V_{2}\) of type \(n\), then \(V_{1} \cdot V_{2}\) is of type \(m + n\): for if \(k^{\bullet} \in \singularknots_{m + n + 1}\), then either \(|I| > m\) or \(|\hat{I}| > n\), so in each summand, one of the cofactors is a Vassiliev invariant being evaluated above its order, so zero. Hence \((V_{1} \cdot V_{2})(\partial^{S}(k^{\bullet})) = 0\).
+	It follows directly from this that the product of two Vassiliev invariants respects the filtration: if \(V_{1}\) is of type \(m\) and \(V_{2}\) of type \(n\), then \(V_{1} \cdot V_{2}\) is of type \(m + n\): for if \(k^{\bullet} \in \singularknots_{m + n + 1}\), then either \(|I| > m\) or \(|\bar{I}| > n\), so in each summand, one of the cofactors is a Vassiliev invariant being evaluated above its order, so zero. Hence \((V_{1} \cdot V_{2})(\partial^{S}(k^{\bullet})) = 0\).
 
 	How is this argument in analogy with some property of polynomials? Translating it from the knot-theoreic setting back into the original setting of multivariable calculus, it becomes a proof that polynomials are filtered by degree. So, in summary the cumbersome proof that \(\Delta\) respects the filtration on \(\mathcal{K}\) is a dual-version in a knot-theoretic setting of the fact that polynomials are filtered by degree.
 \end{remark}
